module/core/derive_tools/tests/inc/index_mut/compiletime/enum.rs
use derive_tools::IndexMut;

#[ derive( IndexMut ) ] 
enum Enum< T >
{
  Nothing,
  #[ index ]
  IndexVector( Vec< T > )  
}

fn main()
{  
}
